# NoKV

./: 404.html  AGENTS.md  CONTRIBUTING.md  Cargo.toml  README.md  architecture.html  cache.html  cli.html  compaction.html  config.html  control_and_execution_protocols.html  coordinator.html  demo.html  entry.html  errors.html  file.html  flush.html  fsmeta.html  getting_started.html  index.html  landing_buffer.html  manifest.html  memtable.html  migration.html  percolator.html  print.html  raftstore.html  range_filter.html  recovery.html  rooted_truth.html  runtime.html  scripts.html  searcher-c2a407aa.js  searchindex-02ccce7e.js  searchindex-279bd33f.js  searchindex-9c28860c.js  stats.html  testing.html  thermos.html  toc-87a624fe.js  (+3 more)
.github/workflows/: release-crates.yml
bench/agent-interface/: BENCHMARK_REPORT.md  README.md
bench/agent-interface/arms/: nokv_native.yaml
crates/nokv/: Cargo.toml
crates/nokv-agent/: Cargo.toml
crates/nokv-agent/src/: codec.rs  error.rs  event.rs  fs.rs  holt.rs  index.rs  key.rs  lib.rs  mcp.rs  model.rs  query.rs  store.rs  tool.rs
crates/nokv-agent/tests/: public_surface.rs
crates/nokv-client/: Cargo.toml
crates/nokv-server/: Cargo.toml
crates/nokv-server/src/rpc/: mod.rs  wire.rs
dev/bench/: data.js
docs/: lingtai-workbench-preflight.md
docs/announcements/: nokv-lingtai-design-partner.md  nokv-lingtai-design-partner.zh-CN.md
docs/development/: code_contract.md  nokv-agent.md
scripts/lingtai-workbench/: README.md  install_workbench_mcp.py  install_workbench_mcp_test.py  start_rustfs.sh  up.sh
(+9 files in other folders)
