[package]
name = "nokv-server"
version = "0.1.0"
description = "Long-running NoKV metadata server and framed RPC service."
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true

[features]
default = []
etcd = ["nokv-control/etcd"]

[dependencies]
nokv-control.workspace = true
nokv-meta.workspace = true
nokv-object.workspace = true
nokv-protocol.workspace = true
nokv-types.workspace = true
sha2.workspace = true

[dev-dependencies]
# Path-only (no version) so cargo strips this dev-dep when packaging;
# a versioned entry would recreate the server <-> client publish cycle.
nokv-client = { path = "../nokv-client" }
tempfile.workspace = true
